syntax = "proto3";
package proto;

option go_package = "github.com/go-developer-ya-practicum/gophkeeper/proto";

service GophKeeper {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc VerifyToken(VerifyTokenRequest) returns(VerifyTokenResponse);
}

message VerifyTokenRequest{
  string access_token = 1;
}
message VerifyTokenResponse{
  int32 user_id = 1;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}
message SignUpResponse {
  string access_token = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}
message SignInResponse {
  string access_token = 1;
}
