syntax = "proto3";
package proto;

option go_package = "github.com/go-developer-ya-practicum/gophkeeper/proto";

service SecretService {
  rpc GetSecret(GetSecretRequest) returns(GetSecretResponse);
  rpc CreateSecret(CreateSecretRequest) returns(CreateSecretResponse);
  rpc UpdateSecret(UpdateSecretRequest) returns(UpdateSecretResponse);
  rpc DeleteSecret(DeleteSecretRequest) returns(DeleteSecretResponse);

  rpc ListSecrets(ListSecretsRequest) returns(ListSecretsResponse);
}

message GetSecretRequest{
  string name = 1;
}

message GetSecretResponse {
  string name = 1;
  bytes content = 2;
  string version = 3;
}

message CreateSecretRequest {
  string name = 1;
  bytes content = 2;
}

message CreateSecretResponse {
  string name = 1;
  string version = 2;
}

message UpdateSecretRequest {
  string name = 1;
  bytes content = 2;
}

message UpdateSecretResponse {
  string name = 1;
  string version = 2;
}

message DeleteSecretRequest {
  string name = 1;
}

message DeleteSecretResponse {
  string name = 1;
}

message ListSecretsRequest {
}

message SecretInfo {
  string name = 1;
  bytes content = 2;
  string version = 3;
}

message ListSecretsResponse {
  repeated SecretInfo secrets = 1;
}
